baml_language/crates/baml_tests/snapshots/unknown_type_error/baml_tests__unknown_type_error__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR ITEMS ===
function Bar(x: unknown_param_type) -> int {
    1
}

function Foo() -> blah {
    1
}

function Baz() -> unknown_optional? {
    null
}
