baml_language/crates/baml_tests/snapshots/unknown_type_error/baml_tests__unknown_type_error__03_hir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.Bar(x: user.unknown_param_type) -> int  [expr] {
  {  } 1
}
function user.Baz() -> user.unknown_optional?  [expr] {
  {  } null
}
function user.Foo() -> user.blah  [expr] {
  {  } 1
}
