baml_language/crates/baml_tests/snapshots/unknown_type_error/baml_tests__unknown_type_error__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.Foo() -> void {
    // Locals:
    let _0: void // _0 // return

    bb0: {
        _0 = const 1_i64;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.Baz() -> void? {
    // Locals:
    let _0: void? // _0 // return

    bb0: {
        _0 = const null;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.Bar(x: void) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: void // x // param

    bb0: {
        _0 = const 1_i64;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
