baml_language/crates/baml_tests/snapshots/unknown_type_error/baml_tests__unknown_type_error__04_thir.snap
---
source: target/debug/build/baml_tests-176fd1045f27e6d5/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
  Function Bar:
    Return: Int
    Errors:
      - Unknown type unknown_param_type
  Function Foo:
    Return: Int
    Errors:
      - Unknown type blah
  Function Baz:
    Return: Null
    Errors:
      - Unknown type unknown_optional
