baml_language/crates/baml_tests/snapshots/unknown_type_error/baml_tests__unknown_type_error__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Warning: unreachable arm
   ╭─[ registry.baml:1:1 ]
   │
 1 │ // testing.TestCollector — collector for tests and testsets.
   │ │ 
   │ ╰─ unreachable arm
   │ 
   │ Note: Error code: E0001
───╯

  [type] Warning: unreachable arm
    ╭─[ registry.baml:65:13 ]
    │
 65 │ ╭─▶       _ => {
    ┆ ┆   
 68 │ ├─▶     }
    │ │           
    │ ╰─────────── unreachable arm
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: type `testing.TestRunner` is not callable
    ╭─[ registry.baml:77:24 ]
    │
 77 │ ╭─▶     r: TestRunner => r(base_run)
 78 │ ├─▶   }
    │ │         
    │ ╰───────── type `testing.TestRunner` is not callable
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: type `() -> testing.TestReport | unknown` is not callable
    ╭─[ registry.baml:79:5 ]
    │
 79 │ ╭─▶   effective_run()
 80 │ ├─▶ }
    │ │       
    │ ╰─────── type `() -> testing.TestReport | unknown` is not callable
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: type `testing.TestSetRunner` is not callable
    ╭─[ registry.baml:86:27 ]
    │
 86 │ ╭─▶     r: TestSetRunner => r(run_children)
 87 │ ├─▶   }
    │ │         
    │ ╰───────── type `testing.TestSetRunner` is not callable
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: type `() -> testing.TestSetReport | unknown` is not callable
    ╭─[ registry.baml:88:5 ]
    │
 88 │ ╭─▶   effective_run()
 89 │ ├─▶ }
    │ │       
    │ ╰─────── type `() -> testing.TestSetReport | unknown` is not callable
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: unresolved type: blah
   ╭─[ unknown_type_error.baml:3:18 ]
   │
 3 │ function Foo() -> blah {
   │                  ──┬──  
   │                    ╰──── unresolved type: blah
   │ 
   │ Note: Error code: E0001
───╯

  [type] Error: unresolved type: unknown_param_type
   ╭─[ unknown_type_error.baml:8:16 ]
   │
 8 │ function Bar(x: unknown_param_type) -> int {
   │                ─────────┬─────────  
   │                         ╰─────────── unresolved type: unknown_param_type
   │ 
   │ Note: Error code: E0001
───╯

  [type] Error: unresolved type: unknown_optional
    ╭─[ unknown_type_error.baml:13:18 ]
    │
 13 │ function Baz() -> unknown_optional? {
    │                  ─────────┬────────  
    │                           ╰────────── unresolved type: unknown_optional
    │ 
    │ Note: Error code: E0001
────╯
