baml_language/crates/baml_tests/snapshots/unknown_type_error/baml_tests__unknown_type_error__06_codegen.snap
---
source: target/debug/build/baml_tests-7d70f780e0809cb8/out/generated_tests.rs
expression: output
---
=== BYTECODE ===
Functions: 6
Objects: 65
Globals: 53

Function Bar (arity: 1, kind: Bytecode):
     0   LOAD_CONST 0   (1)
     1   RETURN         

Function Baz (arity: 0, kind: Bytecode):
     0   LOAD_CONST 0   (null)
     1   RETURN         

Function Foo (arity: 0, kind: Bytecode):
     0   LOAD_CONST 0   (1)
     1   RETURN         

Function baml.llm.build_request (arity: 2, kind: Bytecode):
<<<<<<< HEAD
     0    INIT_LOCALS 4       
     1    LOAD_GLOBAL 43      (<fn baml.llm.get_jinja_template>)
     2    LOAD_VAR 1          (function_name)
     3    DISPATCH_FUTURE 1   
     4    AWAIT               
     5    STORE_VAR 3         (jinja_string)
     6    LOAD_GLOBAL 46      (<fn baml.llm.get_client_function>)
     7    LOAD_VAR 1          (function_name)
     8    DISPATCH_FUTURE 1   
     9    AWAIT               
     10   CALL 0              
     11   STORE_VAR 4         (primitive_client)
     12   LOAD_GLOBAL 45      (<fn baml.llm.PrimitiveClient.render_prompt>)
     13   LOAD_VAR 4          (primitive_client)
     14   LOAD_VAR 3          (jinja_string)
     15   LOAD_VAR 2          (args)
     16   DISPATCH_FUTURE 3   
     17   AWAIT               
     18   STORE_VAR 5         (prompt)
     19   LOAD_GLOBAL 35      (<fn baml.llm.PrimitiveClient.specialize_prompt>)
     20   LOAD_VAR 4          (primitive_client)
     21   LOAD_VAR 5          (prompt)
     22   DISPATCH_FUTURE 2   
=======
     0    LOAD_CONST 0        (null)
     1    LOAD_CONST 0        (null)
     2    LOAD_CONST 0        (null)
     3    LOAD_CONST 0        (null)
     4    LOAD_GLOBAL 43      (<fn baml.llm.get_jinja_template>)
     5    LOAD_VAR 1          (function_name)
     6    DISPATCH_FUTURE 1   
     7    AWAIT               
     8    STORE_VAR 3         (jinja_string)
     9    LOAD_GLOBAL 46      (<fn baml.llm.get_client_function>)
     10   LOAD_VAR 1          (function_name)
     11   DISPATCH_FUTURE 1   
     12   AWAIT               
     13   CALL 0              
     14   STORE_VAR 4         (primitive_client)
     15   LOAD_GLOBAL 45      (<fn baml.llm.PrimitiveClient.render_prompt>)
     16   LOAD_VAR 4          (primitive_client)
     17   LOAD_VAR 3          (jinja_string)
     18   LOAD_VAR 2          (args)
     19   DISPATCH_FUTURE 3   
     20   AWAIT               
     21   STORE_VAR 5         (prompt)
     22   LOAD_GLOBAL 35      (<fn baml.llm.PrimitiveClient.specialize_prompt>)
     23   LOAD_VAR 4          (primitive_client)
     24   LOAD_VAR 5          (prompt)
     25   DISPATCH_FUTURE 2   
     26   AWAIT               
     27   STORE_VAR 6         (specialized_prompt)
     28   LOAD_GLOBAL 36      (<fn baml.llm.PrimitiveClient.build_request>)
     29   LOAD_VAR 4          (primitive_client)
     30   LOAD_VAR 6          (specialized_prompt)
     31   DISPATCH_FUTURE 2   
     32   AWAIT               
     33   RETURN              

Function baml.llm.call_llm_function (arity: 2, kind: Bytecode):
     0    LOAD_CONST 0        (null)
     1    LOAD_CONST 0        (null)
     2    LOAD_CONST 0        (null)
     3    LOAD_CONST 0        (null)
     4    LOAD_CONST 0        (null)
     5    LOAD_CONST 0        (null)
     6    LOAD_CONST 0        (null)
     7    LOAD_GLOBAL 43      (<fn baml.llm.get_jinja_template>)
     8    LOAD_VAR 1          (function_name)
     9    DISPATCH_FUTURE 1   
     10   AWAIT               
     11   STORE_VAR 3         (jinja_string)
     12   LOAD_GLOBAL 46      (<fn baml.llm.get_client_function>)
     13   LOAD_VAR 1          (function_name)
     14   DISPATCH_FUTURE 1   
     15   AWAIT               
     16   CALL 0              
     17   STORE_VAR 4         (primitive_client)
     18   LOAD_GLOBAL 45      (<fn baml.llm.PrimitiveClient.render_prompt>)
     19   LOAD_VAR 4          (primitive_client)
     20   LOAD_VAR 3          (jinja_string)
     21   LOAD_VAR 2          (args)
     22   DISPATCH_FUTURE 3   
>>>>>>> 5e8771e93 (Here's some type checking)
     23   AWAIT               
     24   STORE_VAR 6         (specialized_prompt)
     25   LOAD_GLOBAL 36      (<fn baml.llm.PrimitiveClient.build_request>)
     26   LOAD_VAR 4          (primitive_client)
     27   LOAD_VAR 6          (specialized_prompt)
     28   DISPATCH_FUTURE 2   
     29   AWAIT               
     30   RETURN              

Function baml.llm.call_llm_function (arity: 2, kind: Bytecode):
     0    INIT_LOCALS 7       
     1    LOAD_GLOBAL 43      (<fn baml.llm.get_jinja_template>)
     2    LOAD_VAR 1          (function_name)
     3    DISPATCH_FUTURE 1   
     4    AWAIT               
     5    STORE_VAR 3         (jinja_string)
     6    LOAD_GLOBAL 46      (<fn baml.llm.get_client_function>)
     7    LOAD_VAR 1          (function_name)
     8    DISPATCH_FUTURE 1   
     9    AWAIT               
     10   CALL 0              
     11   STORE_VAR 4         (primitive_client)
     12   LOAD_GLOBAL 45      (<fn baml.llm.PrimitiveClient.render_prompt>)
     13   LOAD_VAR 4          (primitive_client)
     14   LOAD_VAR 3          (jinja_string)
     15   LOAD_VAR 2          (args)
     16   DISPATCH_FUTURE 3   
     17   AWAIT               
     18   STORE_VAR 5         (prompt)
     19   LOAD_GLOBAL 35      (<fn baml.llm.PrimitiveClient.specialize_prompt>)
     20   LOAD_VAR 4          (primitive_client)
     21   LOAD_VAR 5          (prompt)
     22   DISPATCH_FUTURE 2   
     23   AWAIT               
     24   STORE_VAR 6         (specialized_prompt)
     25   LOAD_GLOBAL 36      (<fn baml.llm.PrimitiveClient.build_request>)
     26   LOAD_VAR 4          (primitive_client)
     27   LOAD_VAR 6          (specialized_prompt)
     28   DISPATCH_FUTURE 2   
     29   AWAIT               
     30   STORE_VAR 7         (http_request)
     31   LOAD_GLOBAL 33      (<fn baml.http.send>)
     32   LOAD_VAR 7          (http_request)
     33   DISPATCH_FUTURE 1   
     34   AWAIT               
     35   STORE_VAR 8         (http_response)
     36   LOAD_GLOBAL 30      (<fn baml.http.Response.text>)
     37   LOAD_VAR 8          (http_response)
     38   DISPATCH_FUTURE 1   
     39   AWAIT               
     40   STORE_VAR 9         (result)
     41   LOAD_GLOBAL 37      (<fn baml.llm.PrimitiveClient.parse>)
     42   LOAD_VAR 4          (primitive_client)
     43   LOAD_VAR 9          (result)
     44   LOAD_VAR 1          (function_name)
     45   DISPATCH_FUTURE 3   
     46   AWAIT               
     47   RETURN              

Function baml.llm.render_prompt (arity: 2, kind: Bytecode):
<<<<<<< HEAD
     0    INIT_LOCALS 3       
     1    LOAD_GLOBAL 43      (<fn baml.llm.get_jinja_template>)
     2    LOAD_VAR 1          (function_name)
     3    DISPATCH_FUTURE 1   
     4    AWAIT               
     5    STORE_VAR 3         (jinja_string)
     6    LOAD_GLOBAL 46      (<fn baml.llm.get_client_function>)
     7    LOAD_VAR 1          (function_name)
     8    DISPATCH_FUTURE 1   
     9    AWAIT               
     10   CALL 0              
     11   STORE_VAR 4         (primitive_client)
     12   LOAD_GLOBAL 45      (<fn baml.llm.PrimitiveClient.render_prompt>)
     13   LOAD_VAR 4          (primitive_client)
     14   LOAD_VAR 3          (jinja_string)
     15   LOAD_VAR 2          (args)
     16   DISPATCH_FUTURE 3   
     17   AWAIT               
     18   STORE_VAR 5         (prompt)
     19   LOAD_GLOBAL 35      (<fn baml.llm.PrimitiveClient.specialize_prompt>)
     20   LOAD_VAR 4          (primitive_client)
     21   LOAD_VAR 5          (prompt)
     22   DISPATCH_FUTURE 2   
     23   AWAIT               
     24   RETURN
=======
     0    LOAD_CONST 0        (null)
     1    LOAD_CONST 0        (null)
     2    LOAD_CONST 0        (null)
     3    LOAD_GLOBAL 43      (<fn baml.llm.get_jinja_template>)
     4    LOAD_VAR 1          (function_name)
     5    DISPATCH_FUTURE 1   
     6    AWAIT               
     7    STORE_VAR 3         (jinja_string)
     8    LOAD_GLOBAL 46      (<fn baml.llm.get_client_function>)
     9    LOAD_VAR 1          (function_name)
     10   DISPATCH_FUTURE 1   
     11   AWAIT               
     12   CALL 0              
     13   STORE_VAR 4         (primitive_client)
     14   LOAD_GLOBAL 45      (<fn baml.llm.PrimitiveClient.render_prompt>)
     15   LOAD_VAR 4          (primitive_client)
     16   LOAD_VAR 3          (jinja_string)
     17   LOAD_VAR 2          (args)
     18   DISPATCH_FUTURE 3   
     19   AWAIT               
     20   STORE_VAR 5         (prompt)
     21   LOAD_GLOBAL 35      (<fn baml.llm.PrimitiveClient.specialize_prompt>)
     22   LOAD_VAR 4          (primitive_client)
     23   LOAD_VAR 5          (prompt)
     24   DISPATCH_FUTURE 2   
     25   AWAIT               
     26   RETURN
>>>>>>> 5e8771e93 (Here's some type checking)
