baml_language/crates/baml_tests/snapshots/unknown_type_error/baml_tests__unknown_type_error__06_codegen2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Bar(x: null) -> int {
    load_const 1
    return
}

function user.Baz() -> null? {
    load_const null
    return
}

function user.Foo() -> null {
    load_const 1
    return
}
